--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Straba Firmware",
   "version": "1.0.0",
+  "new_install_skip_erase": true,
   "builds": [
     {
       "chipFamily": "ESP32-S3",
